--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "tanvir",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.5"
