--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "school management server",
   "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "author": "tanvir",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "ts-node-dev": "^2.0.0"
   }
 }
