--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "tanvir",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "typescript": "^5.2.2"
   },
