--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "tsc --watch",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "lint:fix": "eslint --fix",
+    "prettier:check":"npx prettier --write ."
   },
   "author": "tanvir",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
