--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint-prettier": "npm run lint:check && npm run prettier:check",
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "lint:fix": "eslint --fix",
+    "lint:fix": "eslint . --fix",
+    "prettier:fix": "prettier --write .",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "author": "tanvir",
@@ -30,6 +31,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/connect": "^3.4.35",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
