--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.5",
     "ts-node-dev": "^2.0.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
