--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^7.4.5",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.22.2"
   }
 }
