--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status": "^1.7.0",
     "mongoose": "^7.4.5",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.10.0",
